Changed flow of registration page. Also, fixed issue with hints not showing up before clicking

--- a/Online-Messaging-App/src/app/register/register.component.scss
+++ b/Online-Messaging-App/src/app/register/register.component.scss
@@ -1,6 +1,22 @@
+$float: left;
+$margin: auto;
+$display-style: table;
 .mat-display-2{
   margin-top: 3rem;
 }
-.mat-form-field{
+.form-group{
+  float:$float;
   margin: 1rem;
 }
+.random{
+  margin-right: $margin;
+  margin-left: $margin;
+  display:$display-style;
+}
+.btn-primary{
+  margin-right: $margin;
+  margin-left: $margin;
+  display:$display-style;
+  text-align: center;
+}
+
